[gd_scene load_steps=25 format=3 uid="uid://dxpss0gi3yi3j"]

[ext_resource type="Script" path="res://Characters/AndreiKulek/Projectiles/Fireball.gd" id="1_x8nam"]
[ext_resource type="Texture2D" uid="uid://qw68034ehonv" path="res://Characters/AndreiKulek/Projectiles/fireball-Sheet.png" id="2_yw57f"]
[ext_resource type="AudioStream" uid="uid://d0qwp38ktaekw" path="res://Characters/AndreiKulek/Projectiles/Boom.mp3" id="4_3idlo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_moe33"]
atlas = ExtResource("2_yw57f")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdra1"]
atlas = ExtResource("2_yw57f")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_14g8m"]
atlas = ExtResource("2_yw57f")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2cww"]
atlas = ExtResource("2_yw57f")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdn81"]
atlas = ExtResource("2_yw57f")
region = Rect2(96, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_558ia"]
atlas = ExtResource("2_yw57f")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcwyh"]
atlas = ExtResource("2_yw57f")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkhev"]
atlas = ExtResource("2_yw57f")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnrrx"]
atlas = ExtResource("2_yw57f")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxi1h"]
atlas = ExtResource("2_yw57f")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1knsv"]
atlas = ExtResource("2_yw57f")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4r7f"]
atlas = ExtResource("2_yw57f")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fppm"]
atlas = ExtResource("2_yw57f")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltolj"]
atlas = ExtResource("2_yw57f")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aowfc"]
atlas = ExtResource("2_yw57f")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo2hu"]
atlas = ExtResource("2_yw57f")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_goquh"]
atlas = ExtResource("2_yw57f")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbh7t"]
atlas = ExtResource("2_yw57f")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jhen"]
atlas = ExtResource("2_yw57f")
region = Rect2(96, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvomi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_moe33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdra1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14g8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2cww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdn81")
}],
"loop": false,
"name": &"boom",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_558ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcwyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkhev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnrrx")
}],
"loop": false,
"name": &"end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxi1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1knsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4r7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fppm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltolj")
}],
"loop": true,
"name": &"flight",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aowfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo2hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goquh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbh7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jhen")
}],
"loop": false,
"name": &"start",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qqqle"]
radius = 4.0

[node name="Fireball" type="Area2D" groups=["fireball"]]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_x8nam")

[node name="Ball" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vvomi")
animation = &"end"

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_qqqle")

[node name="Boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3idlo")
volume_db = -2.512

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Ball" to="." method="_on_ball_animation_finished"]
